--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "post": "^0.0.1",
+    "sass": "^1.55.0",
+    "tailwindcss": "^3.1.8"
   }
 }
