--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
