--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.41.5",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "styled-components": "^5.3.6"
