--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "emailjs": "^4.0.1",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "17.0.2",
